[package]
name = "tm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "cargo"] }
dialoguer = { version = "0.10.4", features = ["completion", "fuzzy-select"] }
tmux_interface = "0.2.1"
which = "4.4.0"
